deploy/managed/cloudnativepg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: repody-data
  labels:
    app.kubernetes.io/part-of: repody
    repody.io/plane: data
